--- a/WebDev/social-links-profile-main/HTML/css/style.css
+++ b/WebDev/social-links-profile-main/HTML/css/style.css
@@ -54,7 +54,11 @@ ul li{
     /* border: 1px solid #fff; */
     border-radius: 10px;
     font-weight: 600;
-    
+}
+
+a:link {
+    color:#fff;
+    text-decoration: none;
 }
 
 .name {
@@ -73,4 +77,28 @@ ul li{
 
 .attribution{
     margin-top:10rem;
+}
+
+/* only take into effect if it's under 375 pixels width for mobile devices */
+@media(max-width:375px){
+    .container {
+        width:85%;
+        margin:4rem auto; 
+    }
+    
+    .img{
+        margin:1.5rem auto;
+        width:6rem;
+        border-radius: 100%;
+        display:block;
+    }
+
+    .box {
+        padding:5% 0%;
+    }
+
+    body{
+        margin:0;
+        padding:0
+    }
 }
