--- a/WebDev/my-react-app/src/index.css
+++ b/WebDev/my-react-app/src/index.css
@@ -7,7 +7,8 @@
 .container {
   display:grid;
   grid-template-rows: 125px;
-  grid-template-columns: 20% 40% 40%;
+  /* grid-template-columns: 20% 40% 40%; */
+  grid-template-columns: minmax(150px, 1fr) minmax(300px, 2fr) minmax(300px, 2fr);
   /* border:4px solid black; */
   background-color: hsl(0, 0%, 84%);
   /* margin:0 10px; */
@@ -223,23 +224,29 @@
   cursor:pointer;
   list-style-type: none;
   align-items: center;
-  padding-right: 24px;
+  padding-right: 26px;
+  border-left: 0px solid transparent !important;
 }
 .left-column li {
   color:hsl(0, 0%, 35%);
   font-weight: 100;
   padding:10px 20px;
-  /* border:1px solid black; */
+  border-left:5px solid transparent;
   line-height: 1.6em;;
 }
-.left-column li:hover {
-  color:hsl(0, 0%, 55%);
-  transition: 0.5s;
+
+.left-column li:hover, li:target{
+  color: hsl(0, 0%, 35%);
+  border-left:5px solid hsl(14, 100%, 55%);
+  transition: 0.3s;
 }
 .left-column li:not(:hover) {
-  color: hsl(0, 0%, 35%);
-  transition: 0.5s;
+  color:hsl(0, 0%, 55%);
+  border-left:5px solid transparent;
+  padding:10px 20px;
+  transition: 0.3s;
 }
+
 .middle-column h2 {
   padding:5%;
   padding-left: 10%;
