--- a/WebDev/my-react-app/src/index.css
+++ b/WebDev/my-react-app/src/index.css
@@ -7,10 +7,11 @@
 .container {
   display:grid;
   grid-template-rows: 125px;
-  /* grid-template-columns: 20% 40% 40%; */
+  /* grid-template-columns: 1fr 2fr 2fr; */
   grid-template-columns: minmax(150px, 1fr) minmax(300px, 2fr) minmax(300px, 2fr);
   /* border:4px solid black; */
   background-color: hsl(0, 0%, 84%);
+  
   /* margin:0 10px; */
 }
 
@@ -90,15 +91,17 @@
 
 .blocks {
   /* border:1px solid darkmagenta; */
-  width:100hw;
-  margin:0 0px 41px 0px;
+  margin:0;
+  display:grid;
+  grid-template-rows: 50px;
+  grid-template-columns: 3fr 2fr 3fr;
+  vertical-align: center;
+  align-items: center;
 }
 
+
 .block {
-  float:left;
-  padding:10px;
-  box-sizing:border-box;
-  width:Calc(100% / 3);
+  padding:15px;
   border:1px solid hsl(0, 0%, 70%);
   background-color: hsl(0, 0%, 84%);
   text-align: center;
@@ -106,7 +109,20 @@
 
 .block:not(:last-child) {
   border-right: none;
+  /* max-width: 1fr; */
 }
+/* .block:nth-child(2) {
+  /* max-width:1fr; *
+}
+.block:first-child {
+  /* max-width:1fr; *
+  /* text-align: right; *
+  /* padding-right:30%; *
+}
+.block:last-child {
+  /* text-align: left; *
+  /* padding-left:30%; *
+} */
 
 .type {
   font-weight: bold;
@@ -220,6 +236,7 @@
   background-color: hsl(0, 0%, 90%);
 }
 .left-column ul {
+  margin-top:Calc(1.6rem + 20px);
   float:right;
   cursor:pointer;
   list-style-type: none;
@@ -238,23 +255,131 @@
 .left-column li:hover, li:target{
   color: hsl(0, 0%, 35%);
   border-left:5px solid hsl(14, 100%, 55%);
-  transition: 0.3s;
+  transition: 0.5s;
 }
 .left-column li:not(:hover) {
   color:hsl(0, 0%, 55%);
   border-left:5px solid transparent;
   padding:10px 20px;
-  transition: 0.3s;
+  transition: 0.5s;
+}
+.middle-column {
+  border:1px solid brown;
 }
 
 .middle-column h2 {
-  padding:5%;
-  padding-left: 10%;
+  padding:5% 10%;
   border-bottom: 1px solid hsl(0, 0%, 55%);
 }
+
+.tab-section-input {
+  padding-top:20px;
+  /* border:1px solid salmon; */
+}
+
+.tab-section {
+  margin:5% 10%;
+  display:grid;
+  grid-template-rows: 50px max-content;
+  /* padding:5% 10%; */
+  padding-top:10px;
+  padding-bottom: 64px; 
+  border-bottom: 1px solid hsl(0, 0%, 84%);
+  /* border:1px solid red; */
+}
+
+.tab-section-question-icon {
+  position:relative;
+  top:2.5px;
+  margin-left: 8px;
+  /* border:1px solid blue; */
+}
+.tab-section-question-icon:hover {
+  /* does something */
+}
+.tab-section-span {
+
+}
+.tab-section-div {
+  display:flex;
+  flex-direction: row;
+}
+.tab-section-label {
+  display:block;
+  position:relative;
+  padding-left: 35px;
+  padding-top:2px;
+  margin-bottom:12px;
+  cursor:pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  /* border:1px solid green; */
+}
+.tab-section-label input {
+  position:absolute;
+  opacity:0;
+  cursor:pointer;
+  height:0;
+  width:0;
+}
+.checkmark {
+  position:absolute;
+  top:0;
+  left:0;
+  height:20px;
+  width:20px;
+  border:1px solid hsl(0, 0%, 84%);
+  border-radius: 5px;
+}
+.checkmark:after {
+  content:"";
+  position:absolute;
+  visibility:hidden;
+  opacity: 0;
+  transition:visibility 0s, opacity 0.5s ease;
+}
+.tab-section-label input:checked ~ .checkmark:after {
+  visibility: visible;
+  opacity:1;
+  transition:visibility 0s, opacity 0.5s ease;
+}
+.tab-section-label input:not(:checked) ~ .checkmark:after {
+  transition: 0.5s ease;
+}
+.tab-section-label .checkmark:after {
+  left:6.5px;
+  top:2.5px;
+  width:5px;
+  height:10px;
+  border: solid rgb(0, 0, 0);
+  border-width:0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.tab-section-label:hover input ~ .checkmark {
+  /* background-color:#ccc;  */
+  border:1px solid hsl(0, 0%, 49%);
+}
+.tab-section-label input:checked ~ .checkmark {
+  /* background-color: #d3d3d3; */
+  border-color: hsl(0, 0%, 49%);
+}
+.tab-section-label input:not(:checked) ~ .checkmark {
+  transition: 0.5s ease;
+}
+.tab-section-checkbox {
+  
+  border:2px solid pink;
+  margin-right:25px;
+  width:20px;
+}
+
 .core-count{
-  padding:5%;
-  padding-left: 10%;
+  /* padding:5%; */
+  /* padding: 5% 10%; */
 }
 
 input[type=range]{
@@ -278,6 +403,7 @@ input[type=range]{
   background: hsl(0, 0%, 55%);
   height:3px;
   border:1px solid hsl(0, 0%, 55%);
+  border-radius: 2px;
   align-items: center;
   cursor:pointer;
 }
