--- a/WebDev/my-react-app/src/index.css
+++ b/WebDev/my-react-app/src/index.css
@@ -8,7 +8,7 @@
   display:grid;
   grid-template-rows: 125px;
   /* grid-template-columns: 1fr 2fr 2fr; */
-  grid-template-columns: minmax(150px, 1fr) minmax(300px, 2fr) minmax(300px, 2fr);
+  grid-template-columns: 2fr minmax(200px, 450px) 3fr;
   /* border:4px solid black; */
   background-color: hsl(0, 0%, 84%);
   
@@ -17,26 +17,20 @@
 
 .empty {
   border:1px dotted purple;
-  grid-row: span 1;
-  grid-column: 1 / 2;
 }
 .details {
   border:1px dotted red;
-  grid-row: span 1;
-  grid-column:2 / 3;
 }
 .rightColumn {
   border:1px dotted green;
-  grid-row: span 1;
-  grid-column: 3 / 4;
 }
 
 .header {
   /* margin:10px; */
   margin-bottom: 0px;
-  padding:20px;
+  padding:10px 20px;
   width:100hw;
-  border:1px solid hsl(0, 0%, 70%);
+  /* border:1px solid hsl(0, 0%, 70%); */
   align-items: center;
   background-color: hsl(0, 0%, 30%);
   color:white;
@@ -148,11 +142,6 @@
   outline:none
 }
 
-.rightColumn p {
-  
-  width:20%;
-  font-size: 13px;
-}
 
 .gridContainerChild1 {
   display:grid;
@@ -164,24 +153,30 @@
 
 .gridContainerChild2{
   float:left;
-  display:grid;
+  display:inline-grid;
   grid-template-rows: 100px;
-  grid-template-columns: 20% 40% 30%;
-  /* border:4px solid black; */
+  grid-template-columns: minmax(35px, 100px) minmax(70px, 110px) 2fr;
   background-color: hsl(0, 0%, 84%);
   padding:10px;
   align-items: center;
+  /* border:4px solid black; */
+}
+
+.gridContainerChild2 p {
+  width:80%;
+  font-size: 13px;
 }
 
 .gridContainerChild2 button {
+  float:left;
   font-size: 16px;
 }
 
 .reviewButton {
   cursor:pointer;
   width:fit-content;
-  margin:auto;
-  padding: 15px 30px;
+  float:left;
+  padding: 15px 17.5px;
   background-color: hsl(14, 100%, 55%);
   color:white;
   border:none;
@@ -197,10 +192,11 @@
 }
 
 .reviewMemoryMapButton {
+  float:left;
   cursor:pointer;
   width:fit-content;
-  margin:auto;
-  padding: 15px 30px;
+  /* margin:auto; */
+  padding: 15px 17.5px;
   background-color: hsl(14, 100%, 55%);
   color:white;
   border:none;
@@ -229,7 +225,7 @@
 .main-grid {
   display:grid;
   grid-template-rows: 1000px;
-  grid-template-columns: 20% 40% 40%;
+  grid-template-columns: 2fr minmax(200px, 450px) 3fr;
 }
 
 .left-column {
@@ -309,7 +305,7 @@
   position:relative;
   padding-left: 35px;
   padding-top:2px;
-  margin-bottom:12px;
+  margin-bottom:20px;
   cursor:pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -332,6 +328,13 @@
   width:20px;
   border:1px solid hsl(0, 0%, 84%);
   border-radius: 5px;
+}
+.tab-section-label input:disabled ~ .checkmark{
+  opacity: 25% !important;
+
+}
+#disabled {
+  color: hsl(0, 0%, 75%) !important;
 }
 .checkmark:after {
   content:"";
@@ -376,12 +379,6 @@
   margin-right:25px;
   width:20px;
 }
-
-.core-count{
-  /* padding:5%; */
-  /* padding: 5% 10%; */
-}
-
 input[type=range]{
   width:100%;
   max-width: 100%;
@@ -390,24 +387,41 @@ input[type=range]{
   -webkit-appearance:none;
   appearance:none;
 }
-/* .core-count input[type="range"]::-webkit-slider-runnable-track,
-.core-count input[type="range"]::-webkit-slider-thumb {
-   -webkit-appearance:none;
-  appearance:none;  
-} */
-/* #steplist {
-  -webkit-appearance:auto;
-  appearance:auto; 
-} */
-.core-count input[type="range"]::-webkit-slider-runnable-track {
+
+ .ticks {
+  width:Calc(100%);
+  display:flex;
+  flex-wrap: wrap;
+ }
+ /* Need for tick to be positioned properly */
+ .tick:first-child {
+  margin-left:8px;
+ }
+ /* Need for tick to be positioned properly */
+ .tick:last-child {
+  margin-right:8px;
+ }
+ .tick {
+  flex-grow:1;
+  min-width: calc((100% / 4) - 16px); /* only adjust this for spacing between ticks */
+  border-left:1px solid gray;
+  margin-top:6px; /* change for separation of tick from track  can do negative too I think */
+  padding:5px;  /* change for height of tick */
+  border-right:1px solid gray;
+ }
+ .tick:not(:first-child) {
+  border-left:none;
+ }
+.tab-section input[type="range"]::-webkit-slider-runnable-track {
   background: hsl(0, 0%, 55%);
   height:3px;
   border:1px solid hsl(0, 0%, 55%);
   border-radius: 2px;
   align-items: center;
   cursor:pointer;
+  z-index: 1;
 }
-.core-count input[type="range"]::-webkit-slider-thumb {
+.tab-section input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance:none;
   appearance:none;
   width: 16px;
@@ -417,22 +431,24 @@ input[type=range]{
   border-radius: 3px;
   margin-top: -6.5px;
   cursor:pointer;
+  z-index: 2;
 }
-.core-count input[type="range"]:focus {
+.tab-section input[type="range"]:focus {
   outline:none;
 }
-.core-count input[type="range"]:focus::-webkit-slider-thumb {
+.tab-section input[type="range"]:focus::-webkit-slider-thumb {
   border:2px solid #d3d3d3;
   outline: 3px solid #d3d3d3;
   transition: 0.1s;
 }
-.core-count input[type="range"]:not(:focus::-webkit-slider-thumb) {
+.tab-section input[type="range"]:not(:focus::-webkit-slider-thumb) {
   border:2px solid #d3d3d3;
   outline: 0px solid #d3d3d3;
   transition: 0.1s;
 }
 .right-column {
   padding:5%;
+  background-color: hsl(0, 0%, 90%);
   border:1px solid pink;
 }
 .box {
@@ -455,4 +471,32 @@ input[type=range]{
   border-bottom: 1px solid hsl(0, 0%, 70%);
   
   /* border:1px solid red; */
+}
+.buttonGroup {
+  max-width:100%;
+  display:inline-flex;
+  margin:auto;
+}
+.button {
+  /* width:50%; */
+  padding:10px 20px;
+  border:1px solid hsl(0, 0%, 70%);
+}
+.button:first-child {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+.button:last-child {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.button:not(:last-child) {
+  border-right: 0px;
+}
+.button:hover {
+  background-color: hsl(0, 0%, 90%);
+  transition:0.3s ease;
+}
+.button:not(:hover) {
+  transition:0.3s ease;
 }
