--- a/WebDev/interactive-card-details-form-main/html/css/style.css
+++ b/WebDev/interactive-card-details-form-main/html/css/style.css
@@ -7,35 +7,34 @@
 }
 
 body {
+    max-width: 2560px;
+    max-height: 1440px;
     display: flex;
     flex-direction: row;
-    /* vertical-align: center; */
     align-items: center;
-    /* border:1px solid salmon; */
     font-family: 'Space Grotesk', sans-serif;   
     font-size: 12px;
     font-weight: 500; 
     letter-spacing: 2px;  
     text-transform: uppercase;
+    /* border:1px solid salmon; */
 }
 #grid {
     width:100vw;
     height:100vh;
     display:grid;
     grid-template-rows: max-content;
-    grid-template-columns: 2fr 3fr;
+    grid-template-columns: 2fr 4fr;
     gap:0;
-    /* border:1px solid rgb(0, 255, 102); */
     align-items: center;
+    /* border:1px solid rgb(0, 255, 102); */
 }
 
 .container {
-
-    width:50%;
+    width:55%;
+    max-width: 400px;
     margin:auto;    
-
     /* border:1px solid rgb(255, 105, 105); */
-    /* padding:25%; */
 }
 
 input::-webkit-inner-spin-button,
@@ -44,7 +43,7 @@ input::-webkit-outer-spin-button {
 }
 
 input {
-    padding:10px;
+    padding:9px;
     font-family: 'Space Grotesk';
     font-size: 18px;
     color: hsl(212, 12%, 71%);
@@ -52,6 +51,10 @@ input {
     margin-bottom: 20px;
     border-radius: 8px;
     border:1px solid hsl(212, 12%, 71%);
+    outline:none;
+    box-sizing: border-box;
+    /* border:2px solid blue; */
+    /* z-index: 200; */
 }
 
 input::placeholder {
@@ -62,27 +65,28 @@ input::placeholder {
     display:block;
     width:100%;
     padding:10px;
-    box-sizing: border-box;
     border-color: hsl(212, 12%, 71%);
-    outline:none;
 }
 
-#card-number input {
+#card-info {
+    transition: 0.5s ease;
+}
+
+#card-number {
     display:block;
     width:100%;
     padding:10px;
-    box-sizing: border-box;
     border-color: hsl(212, 12%, 71%);
-    outline:none;
 }
 #parent-grid {
     display:grid;
     width:100%;
     grid-template-columns: 1fr 1fr;
     box-sizing: border-box;
+    gap:10px;
+    /* border:2px solid blue */
 }
 #child-grid {
-    /* width:100%; */
     display:grid;
     grid-template-columns: 1fr 1fr;
     gap:10px;
@@ -91,20 +95,20 @@ input::placeholder {
 }
 #child-grid input {
     width:100%;
-    box-sizing: border-box;
     border:1px solid hsl(212, 12%, 71%);
 }
 #expiry-inputs {
     display:grid;
-    /* width:100%; */
     grid-template-columns: 1fr 1fr;
     gap:5px;
     box-sizing: border-box;
     /* border:2px solid purple; */
 } 
-#expirt-inputs input {
+#expiry-inputs input {
     width:100%;
-    box-sizing: border-box;
+}
+#cvc {
+    /* border:2px solid green; */
 }
 
 
@@ -113,23 +117,155 @@ input::placeholder {
 }
 
 
+
+.button {
+    width:100%;
+    margin-top:15px;
+    margin-bottom: 0;
+    font-size: 18px;
+    font-family: 'Space Grotesk';
+    font-weight: normal;
+    border-radius: 8px;
+    border:none;
+    text-align: center;
+    background-color:hsl(278, 68%, 11%);
+    color:white;
+    cursor:pointer;
+}
 #background-image {
     width: 100%;
-    max-width: none;
     height:100vh;
     overflow: hidden;
     image-rendering: auto;
 }
+ #cards {
+    position:absolute;
+    top:0;
+    left:10%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 30%;
+    height:100vh;
+    gap:2em;
+    /* border:5px solid red; */
+ }
+#card-front {
+    position: relative;
+    /* border:1px solid coral; */
+}
+#card-back {
+    position:relative;
+    left:25%;
+    /* border:1px solid coral; */
 
-#confirm-button {
-    width:100%;
-    margin-top:15px;
-    text-align: center;
-    background-color:hsl(278, 68%, 11%);
-    color:white;
 }
 #card-front-image {
+    width:100%;
+    height:auto;
+    display:block;
+    object-fit: contain;
+    z-index: 10;
+    filter: drop-shadow(8.0px 16.0px 16.0px hsl(0deg 0% 0% / 0.38));    border-radius: 10px;
+    /* border:2px solid lightgreen; */
+}
+#card-back-image {
+    left:20%;
+    width:100%;
+    height:auto;
+    display:block;
+    object-fit: contain;
+    z-index: 10;
+    filter: drop-shadow(8.0px 16.0px 16.0px hsl(0deg 0% 0% / 0.38));    border-radius: 10px;
+    /* border:1px solid lightgreen; */
+}
+#logo {
     position:absolute;
-    left:0px;
-    top:0px; 
+    z-index: 15;
+    left:7%;
+    bottom:60%;
+    width:25%;
+    height:auto;
+}
+#front-info-numbers {
+    left:7%;
+    bottom:25%;
+    width:100%;
+    font-size: clamp(1.75vw, 1.75vw, 1.9vw);
+    font-weight: normal;
+    position: absolute;
+    /* text-align: center; */
+    letter-spacing: .2rem;
+    color:white;
+    z-index: 15;
+    /* border:1px solid red; */
+}
+#front-card-name {
+    width:100%;
+    font-size: 1vw;
+    font-weight: normal;
+    position:absolute;
+    left:7%;
+    bottom:10%;
+    color:white;
+    z-index: 15;
+}
+#front-card-expiry {
+    width:100%;
+    font-size: 1vw;
+    font-weight: normal;
+    position:absolute;
+    bottom:10%;
+    left:83%;
+    color:white;
+    z-index: 15;
+}
+#back-info {
+    width:100%;
+    font-size: 1vw;
+    font-weight: normal;
+    position: absolute;
+    left:80%;
+    top:45.5%;
+    color:white;
+    z-index: 15;
+}
+#attribution {
+    width:100%;
+    position: flex;
+    text-align: center;
+}
+#thank-you-page {
+    width:100%;
+    height:fit-content;
+    display:none;
+    grid-template-rows: 50% 15% 10% 25%;
+    text-align: center;
+    vertical-align: center;
+    /* border:1px solid purple; */
+
+
+
+}
+#thank-you-page h2 {
+    letter-spacing: .2rem;
+    font-weight: 500;
+    padding-bottom: 0rem;
+    /* border:1px solid green; */
+}
+#check {
+    max-width: 64px;
+    height:auto;
+    margin:auto;
+    margin-bottom: 2rem;
+    /* border:1px solid red; */
+}
+#thank-you-page p {
+    text-transform: none;
+    color:hsl(212, 12%, 71%);
+    margin-bottom: 2rem;
+    /* border:1px solid pink; */
+}
+#thank-you-page button{
+    padding:10px
 }
