--- a/WebDev/blog-project/frontend/cursor-blog-app/src/Blog.module.css
+++ b/WebDev/blog-project/frontend/cursor-blog-app/src/Blog.module.css
@@ -24,12 +24,13 @@
     /* border:2px solid lightgreen; */
     display:block;
     /* position: absolute; */
-    background-position: center center;
+    background-position:center center;
     background-repeat: no-repeat;
     width:100%;
     height: 275px;
     aspect-ratio: 16 / 9;
     transition: filter 0.3s ease;
+    object-fit: cover;
 }
 .entry-image:hover{
     filter:brightness(85%);
@@ -49,6 +50,7 @@
     opacity: 0;
     transition: background-color 0.3s ease, opacity 0.3s ease;
     z-index: 100;
+    cursor:pointer;
     /* border:3px solid lightcoral; */
 }
 .go-to-post {
