--- a/WebDev/blog-project/frontend/cursor-blog-app/src/Hero.module.css
+++ b/WebDev/blog-project/frontend/cursor-blog-app/src/Hero.module.css
@@ -1,8 +1,126 @@
 .image-container {
-    margin-bottom: 3.5rem;
-}
-
-.image {
     width:100%;
-    height:auto;
+    height: fit-content;
+    /* border:3px solid lightgreen; */
+    position: relative;
+    display: inline-block;
+    margin-bottom: 3.5rem;   
 }
+.slider-wrapper {
+    position:relative;
+    max-width: 48rem;
+    margin:0 auto;
+}
+.slider {
+    display:flex;
+    aspect-ratio: 16 / 10;
+    overflow-x: auto;
+    overflow-y: hidden;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+    touch-action: pan-x; /* Allow only horizontal panning */
+
+}
+.slider::-webkit-scrollbar {
+    display: none;
+}
+.slider {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+.slider img {
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+    object-fit: cover;
+    filter:brightness(75%);
+}
+.slider-nav {
+    display:flex;
+    column-gap:0.5rem;
+    position: absolute;
+    bottom:36px;
+    right:36px;
+    /* transform:translateX(-50%); */
+    z-index: 100;
+}
+.slider-nav button {
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 50%;
+    background-color: #fff;
+    opacity: 0.75;
+    transition: opacity 0.3s ease;
+    z-index: 100;
+    border:none;
+    cursor: pointer
+
+}
+.slider-nav button:hover {
+    opacity: 1;
+}
+/* 
+
+.slide-1 {
+    /* border:2px solid lightgreen; *
+    display:block;
+    background-position: center center;
+    background-repeat: no-repeat;
+    width:100%;
+    filter:brightness(80%);
+    transition: filter 0.3s ease;
+
+}
+.slide-1:hover{
+    filter:brightness(75%);
+} */
+.hover-text {
+    position: absolute;
+    left:0;
+    top:0;
+    width:100%;
+    height: 100%;
+    display:flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: start;
+    /* text-align: center; */
+    color:white;
+    transition: background-color 0.3s ease, opacity 0.3s ease;
+    z-index: 55;
+    cursor:pointer;
+    padding:36px;
+    box-sizing: border-box;
+    /* border:3px solid lightcoral; */
+}
+.hero-category {
+    font-size: 12px;
+    font-weight: 400;
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    margin-bottom: 20px; 
+}
+.hero-title {
+    font-size: 28px;
+    font-weight: 500;
+    margin-bottom: 12px;
+}
+.hero-meta {
+    margin-bottom:10px;
+    font-size: 11px;
+    transform: translateY(10px);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    /* border-top: 0.5px solid hsl(0, 0%, 70%); */
+    color:hsl(0, 0%, 90%);
+}
+.image-container:hover .hover-text {
+    background-color: rgba(0, 0, 0, 0.25);
+    opacity: 1;
+}
+/* .image-container:hover .post-meta {
+    opacity: 1;
+    transform:translateY(0);
+} */
+
+.hero-meta i {
+    font-size: 11px;
+ }
