--- a/WebDev/blog-project/frontend/cursor-blog-app/src/MainContainer.module.css
+++ b/WebDev/blog-project/frontend/cursor-blog-app/src/MainContainer.module.css
@@ -7,7 +7,7 @@
 .main-container {
     /* border:1px solid red; */
     width:75%;
-    /* max-width: 700px; */
+    max-width: 725px;
     margin:auto;
     letter-spacing: .05rem;
     word-spacing: .1rem;
