--- a/WebDev/blog-project/frontend/cursor-blog-app/src/BlogSection.module.css
+++ b/WebDev/blog-project/frontend/cursor-blog-app/src/BlogSection.module.css
@@ -1,3 +1,14 @@
+.entry-container1 {
+    width:100%;
+    height:fit-content;
+    padding-bottom: 4rem;
+    margin-bottom: 3rem;
+    border-bottom:1px solid hsl(0, 0%, 90%);
+    /* border:5px solid red; */
+    box-sizing: border-box;
+}
+
+
 .entry-container2 {
     position: relative;
     width:100%;
