--- a/WebDev/blog-project/frontend/cursor-blog-app/src/BlogGrid.module.css
+++ b/WebDev/blog-project/frontend/cursor-blog-app/src/BlogGrid.module.css
@@ -1,5 +1,15 @@
 .blog-grid button {
     display:flex;
     justify-content: center;
-    margin-bottom: 3rem;;
+    text-align: center;
+    margin:auto;
+    margin-bottom: 3rem;
+    padding:8px;
+    width:120px;
+    height:40px;
+    align-items: center;
+    border:none;
+    cursor:pointer;
+    font-weight: 600;
+    letter-spacing: .1rem;
 }
