--- a/WebDev/blog-project/frontend/cursor-blog-app/src/ShareGrid.module.css
+++ b/WebDev/blog-project/frontend/cursor-blog-app/src/ShareGrid.module.css
@@ -7,12 +7,14 @@
 }
 .share {
     width:100%;
+    height:24px;
     display:grid;
     grid-template-columns: 1fr 1fr;
     gap:15px;
     /* border:1px solid red; */
-    align-items: center;
+    align-content: center;
     transition: 0.3s ease;
+    /* border:1px solid red; */
 }
 .share:hover {
     gap:17.5px;
