--- a/WebDev/blog-project/frontend/cursor-blog-app/src/Instagram.module.css
+++ b/WebDev/blog-project/frontend/cursor-blog-app/src/Instagram.module.css
@@ -10,13 +10,14 @@
     color:black;
     margin-bottom: 0.5rem;
 }
-a {
-    text-align: center;
-    color:hsl(0, 0%, 80%);
-    text-decoration: none;
-    margin:auto;
-    margin-bottom: 1.5rem;
+.container a {
     width:30%;
+    margin:auto;
+    margin-bottom: .25rem;
+    text-align: center;
+    /* color:hsl(0, 0%, 80%); */
+    text-decoration: none;
+    /* border:1px solid red; */
 }
 .meta-info {
     /* border:1px solid red; */
@@ -26,26 +27,50 @@ a {
     justify-content: center;
     align-items: center;
 }
-.profile-image {
+.image-container {
     margin:auto;
+    margin-bottom: .75rem;
     width:48px;
+    height:auto;
+    aspect-ratio: 1 / 1;
     border-radius: 50%;
-    background-position: left 50px bottom 0px;
-    cursor:pointer;
+    overflow: hidden;
+    /* border:2px solid orange; */
 }
-.username {
+
+.profile-image {
+    position: relative;
+    width:100%;
+    height:auto;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+    transform-origin: center center;
+    /* border:1px solid red; */
+}
+.image-container:hover .profile-image{
+    transform: scale(1.15);
+}
+
+.username-link {
     font-size: 14px;
     font-weight: 550;
     letter-spacing: .1rem;
+    transition: .4s ease;
+    /* margin-bottom: .75rem; */
 }
-.entity-name {
+.username-link:hover {
+    color: hsl(0, 0%, 55%);
+}
+.entity-link {
     font-size: 12px;
     color:hsl(0, 0%, 80%);
-    margin-bottom: 1.5rem;
+    /* border:1px solid red; */
 }
 .meta-info {
     font-size: 11px;
     color:hsl(0, 0%, 80%);
+    margin-top:1.5rem;
     margin-bottom: 1.5rem;
 }
 .grid {
