--- a/WebDev/blog-project/frontend/cursor-blog-app/src/TrendingCard.module.css
+++ b/WebDev/blog-project/frontend/cursor-blog-app/src/TrendingCard.module.css
@@ -67,31 +67,30 @@
 
 .post-number {
     position:absolute;
+    top:50%;
+    left:50%;
     transition: 0.3s ease;
-    font-weight: 400;
-    opacity: 1;
-}
-.arrow {
     font-size: 12px;
-    transition: 0.3s ease;
-    font-weight: 400;
+    font-weight: 600;
     opacity: 1;
-}
-.post-number {
-    bottom:20%;
-    transform:translateY(0);
+    transform:translate(-50%, -50%);
 }
 .arrow {
-    bottom:10%;
-    transform: translateY(150%);
+    position: absolute;
+    top:50%;
+    left:50%;
+    transition: 0.3s ease;
+    font-size: 12px;
+    font-weight: 400;
     opacity:0;
+    transform: translate(-50%, 150%);
 }
 
 .trending-card-container:hover .post-number {
-    transform: translateY(-100%);
+    transform: translate(-50%, -250%);
     opacity: 0;
 }
 .trending-card-container:hover .arrow {
-    transform: translateY(0);
+    transform: translate(-50%, -50%);
     opacity: 1;
 }
