--- a/WebDev/blog-project/frontend/src/EntryHeader.module.css
+++ b/WebDev/blog-project/frontend/src/EntryHeader.module.css
@@ -8,22 +8,31 @@
     font-size: 11px;
     margin-top: .25rem;
     margin-bottom: 1.5rem;
-    color:hsl(0, 0%, 50%);
+    color:black;
     /* border:1px solid lightseagreen; */
 }
 .entry-title {
     font-weight: 500;
-    margin-bottom: 1.5rem;
+    margin-bottom: .75rem;
     /* border:1px solid lightgreen; */
 }
-.meta-post {
+.meta-post a, .meta-post{
     font-size: 11px;
-    color:hsl(0, 0%, 50%);
-}
-.meta-post a {
+    color:black;
     text-decoration: none;
-    color:hsl(0, 0%, 50%);
 }
-.meta-post a:visited {
-    color:hsl(0, 0%, 50%);
+.meta-category {
+    text-decoration: none;
+    color:black;
+}
+.entry-title {
+    text-decoration: none;;
+    color:black;
+    transition: 0.3s ease;
+}
+.entry-preview-col a {
+    transition: 0.3s ease;
+}
+.entry-preview-col a:hover, .entry-title:hover {
+    color:hsl(0, 0%, 60%);
 }
