altered name of directory for controller to controllers to accommodate for more controller files. I also compressed the images for a faster load time in the website. I also created a README file so that users understand the project and for future employment. I also added more routes and user authentication, making sure that users cannot delete or edit other user's blog posts. This is important for the integrity of the application. I also created the footer and other components, finishing the frontend part  of this application, although I probably will need to refactor a lot eventually

--- a/WebDev/blog-project/frontend/src/Newsletter.module.css
+++ b/WebDev/blog-project/frontend/src/Newsletter.module.css
@@ -31,7 +31,7 @@
 }
 .email-input {
     width:75%;
-    padding: 10px;
+    padding: 9px;
     padding-left: 20px;
     border:none;
     outline:none;
@@ -40,7 +40,7 @@
 }
 .submit {
     width:25%;
-    padding: 10px;
+    padding: 9px;
     border:none;
     border-radius: 0;
     background-color:#000080;
@@ -57,4 +57,13 @@
     line-height: 1rem;
     color:hsl(0, 0%, 80%);
     text-transform: uppercase;
+    /* border:1px solid red; */
+}
+.disclaimer a {
+    color:hsl(0, 0%, 70%);
+    transition: 0.3s ease;
+}
+.disclaimer a:hover {
+    color:hsl(0, 0%, 50%);
+
 }
