--- a/WebDev/blog-project/frontend/src/Header.module.css
+++ b/WebDev/blog-project/frontend/src/Header.module.css
@@ -44,12 +44,31 @@
     flex-direction: row;
     justify-self: right;
     align-items: center;
+    list-style-type: none;
+    font-size: 14px;
     /*align-content: center;
     width:fit-content;
     height:auto;
     text-align: right;
     float:right; */
     /* border:1px solid purple; */
+}
+.button-group a {
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    gap:6px;
+    padding:8px;
+    color:black;
+    text-decoration: none;
+    /* background-color: hsl(0, 0%, 90%); */
+    border-radius: 2px;
+    transition: 0.2s ease;
+    /* border:1px solid black; */
+
+}
+.button-group a:hover {
+    transform: translateY(-1px);
 }
 .profile-button {
     transition:0.3s ease;
