adding login / logout / register user functionality  for my blog app! This is exciting because I've already integrated protected routes so only users can  see specific things with respect to their account, and now, I'm about to add uploading blog functionality! This is an exciting step, because I'm not sure how to do this on my own, so practice  is needed

--- a/WebDev/blog-project/frontend/pages/Register.module.css
+++ b/WebDev/blog-project/frontend/pages/Register.module.css
@@ -29,9 +29,12 @@
     position:relative;
     z-index: 2;
     background-color:white;
-    width:900px;
-    max-width: 90vw;
-    height:700px;
+    width:75%;
+    height:90%;
+    min-width: 700px;
+    min-height: 544px;
+    max-width: 900px;
+    max-height:700px;
     margin:auto;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
