--- a/WebDev/blog-project/frontend/pages/Login.module.css
+++ b/WebDev/blog-project/frontend/pages/Login.module.css
@@ -29,8 +29,12 @@
     position:relative;
     z-index: 2;
     background-color:white;
-    width:900px;
-    height:600px;
+    width:60%;
+    height:90%;
+    min-width: 700px;
+    min-height: auto;
+    max-width: 900px;
+    max-height: 600px;
     margin:auto;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -43,10 +47,11 @@
 }
 .container h2 {
     font-size: 36px;
-    margin-bottom: 0.5rem;
+    margin-bottom: 4%;
 }
 .container {
     width:60%;
+    min-width: none;
     display:flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -54,16 +59,16 @@
 .prompt {
     font-size: 14px;
     color:grey;
-    margin-bottom: 1.25rem;
+    margin-bottom: 7%;
 }
 .form-group p {
-    margin-bottom: .3rem;
+    margin-bottom: 2%;
     font-size: 14px;
     font-weight: 500;
 
 }
 .form-group input  {
-    margin-bottom: 1.5rem;
+    margin-bottom: 9%;
     padding:12px;
     padding-left: 14px;
     width:100%;
