--- a/WebDev/blog-project/frontend/src/Header.module.css
+++ b/WebDev/blog-project/frontend/src/Header.module.css
@@ -46,11 +46,6 @@
     align-items: center;
     list-style-type: none;
     font-size: 14px;
-    /*align-content: center;
-    width:fit-content;
-    height:auto;
-    text-align: right;
-    float:right; */
     /* border:1px solid purple; */
 }
 .button-group a {
@@ -66,6 +61,26 @@
     transition: 0.2s ease;
     /* border:1px solid black; */
 
+}
+.button-group button {
+    display:flex;
+    flex-direction: row;
+    color:black;
+    text-decoration: none;
+    /* background-color: hsl(0, 0%, 90%); */
+    border-radius: 2px;
+    transition: 0.2s ease;
+    /* border:1px solid red; */
+    width: fit-content;
+}
+.logout-button {
+    /* border:2px blue; */
+    font-size: 14px;
+    gap:6px;
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 .button-group a:hover {
     transform: translateY(-1px);
