Today, I was able to use redux to implement different users creating blog posts so to share with the rest of the website's users. I also used protected routes so that users can see their own blogs and edit them, but aren't  allowed to see other people's blog in the See My Blog Posts page. This is important because every use should be seeing their own personal blog account information. I'm doing a lot of refactoring, but right now  my brain is fried so I can't do anymore thinging. I think I need to come back tomorrow with a sharper, more clear mind. I can see the finish line though, so I'm so excited (probably  further than I think because after t his I need to add editing, and deleting, and then create the actual blog page so people can view the posts. Then I need to add more features I'm looking for. IDK yet, will brainstorm

--- a/WebDev/blog-project/frontend/pages/Login.module.css
+++ b/WebDev/blog-project/frontend/pages/Login.module.css
@@ -45,6 +45,18 @@
     /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
     /* border:1px solid black; */
 }
+.go-back {
+    display:flex;
+    align-items: center;
+    gap:6px;
+    margin-bottom: 1.5rem;
+    text-decoration: none;
+    color:black;
+    transition: 0.3s ease;
+}
+.go-back:hover {
+    opacity: 0.5;
+}
 .container h2 {
     font-size: 36px;
     margin-bottom: 4%;
@@ -101,4 +113,11 @@
 .sign-up {
     font-size: 14px;
     margin:auto;
+}
+
+.sign-up a {
+    color: rgb(212, 194, 173);
+}
+.sign-up a:active {
+    color: rgb(212, 194, 173);
 }
