working on the making blog page... Ran into a huge creative block and could not think of any way to implement this, so I had to do a lot of searching for inspiration but also I was able to figure out how I wanted to fill in the content

--- a/WebDev/blog-project/frontend/pages/Login.module.css
+++ b/WebDev/blog-project/frontend/pages/Login.module.css
@@ -62,11 +62,12 @@
     margin-bottom: 4%;
 }
 .container {
-    width:60%;
+    width:70%;
     min-width: none;
     display:flex;
     flex-direction: column;
     box-sizing: border-box;
+    /* border:1px solid red; */
 }
 .prompt {
     font-size: 14px;
@@ -109,6 +110,7 @@
     font-size: 16px;
     transition: 0.2s ease;
     margin-bottom: 1rem;
+    cursor:pointer;
 }
 .sign-up {
     font-size: 14px;
