--- a/WebDev/blog-project/frontend/pages/Dashboard.module.css
+++ b/WebDev/blog-project/frontend/pages/Dashboard.module.css
@@ -1,25 +1,38 @@
 .container {
     width:75%;
+    max-width: 900px;
     margin:auto;
 }
 .page-name {
-    margin-bottom: 1rem;
+    font-size: 36px;
+    margin-bottom: 1.5rem;
 }
 .page-nav {
-    list-style-type: none;
-    display:flex;
-    flex-direction: row;
-    gap:64px;
+    margin-bottom: 1.5rem;
+    position: relative;
+    background-color: #fff;
+    border-radius: 8px;
+    display: flex;
     align-items: center;
-    margin-bottom: 1rem;
+    gap:64px;
 }
 .page-nav li {
-    width:fit-content;
-}
-.page-nav button {
-    padding: 8px;
-    background-color: #fff; 
-    cursor: pointer;
-    border:none;
+    color:black;
+    list-style-type: none;
     font-size: 18px;
+    cursor: pointer;
+    padding: 12px 23px;
+    position:relative;
+    z-index: 1;
+    transition: color 0.3s ease;
+}
+
+.page-nav span {
+    position: absolute;
+    top:0;
+    height:100%;
+    background: rgb(255, 217, 168);
+    border-radius: 8px;
+    transition: 0.3s ease;
+    z-index: 0;
 }
