--- a/WebDev/blog-project/frontend/src/BlogItem.module.css
+++ b/WebDev/blog-project/frontend/src/BlogItem.module.css
@@ -1,17 +1,26 @@
-.container {
-    border:1px solid red;
-    height:350px;
-    margin:auto;
+.container-link {
+    display:block;
     margin-bottom: 1.5rem;
+    height: fit-content;
+    color: black;
+    text-decoration: none;
+    /* border:1px solid red; */
+}
+
+.container {
+    margin:auto;
+    height:350px;
     max-width: 900px;
     overflow: hidden;
+    border:1px solid hsl(0, 0%, 80%);
+    /* border:1px solid red; */
 }
 .grid {
-    height:350px;
-    border:1px solid blue;
     display:grid;
     grid-template-columns: repeat(2, 1fr);
+    height:350px;
     gap:0;
+    /* border:1px solid blue; */
 }
 .image-container img {
     display:block;
@@ -25,81 +34,93 @@
     scale: 1;
 }
 .preview-box {
-    box-sizing: border-box;
-    border:1px solid green;
-    padding:0px 30px;
     display:grid;
-    grid-template-rows: max-content max-content 8rem max-content;
+    padding:0px 30px;
+    grid-template-rows: max-content 2rem 9rem max-content;
     gap:1rem .5rem ;
-    /* align-items: center; */
-    /* justify-content: space-between; */
-    /* position:relative; */
     width:100%;
+    box-sizing: border-box;
+    /* border:1px solid green; */
 }
 .top-grid {
-    width:100px;
-    height:auto;
     display:grid;
     grid-template-columns: 40px max-content;
     gap:6px;
-    font-size: 16px;
-    /* border:1px solid green; */
-    box-sizing: border-box;
+    width:100%;
+    height:auto;
     margin-top:1.875rem;
+    font-size: 16px;
+    align-items: center;
+    box-sizing: border-box;
+    /* border:1px solid green; */
 }
 .top-grid img {
+    display:flex;
     width:38px;
     height:auto;
     border-radius: 50%;
+    align-self: center;
     /* border:3px solid orange; */
 }
 .top {
     display:flex;
     flex-direction: column;
-    
+    /* border:1px solid red; */
 }
 .title {
-    height:fit-content;
+    /* height:fit-content; */
     /* border:1px solid green; */
-    font-size: 28px;
+    font-size: 26px;
     font-weight: 500;
+    overflow: hidden;
     /* margin-top: 1rem; */
 }
 .content {
-    line-height: 1.5rem;
-    font-family: monospace;
+    letter-spacing: 1px;
+    /* word-spacing: 1em; */
+    /* font-family: monospace; */
     white-space: pre-wrap;
     word-wrap: break-word;
     font-size: 1rem;
-    line-height: 1.5rem;
+    line-height: 1.4rem;
+    /* border:1px solid red; */
+    display: -webkit-box;
+    -webkit-line-clamp: 5; /* number of lines */
+    /* -webkit-box-orient: vertical; */
+    /* overflow: hidden; */
+    text-overflow: ellipsis;
 }
 .bottom {
     /* position: absolute; */
     bottom: 0;
 }
 .meta {
-    position: relative;
+    /* position: relative; */
     /* width:100%; */
-    bottom:24px;
-    display:flex;
-    flex-direction: row;
+    /* bottom:24px; */
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
     box-sizing: border-box;
     border-top:1px solid hsl(0, 0%, 80%);
-    border:1px solid red;
-    padding:24px 0;
+    /* border:1px solid red; */
+    align-items: center;
+    padding-top: 16px;
 }
 .comments {
-    position: absolute;
+    /* position: absolute;
     left:0px;
     top:50%;
-    transform: translateY(-50%);
-    border:1px solid orange;
+    transform: translateY(-50%); */
+    justify-self: start;
+    /* border:1px solid orange; */
 }
 .likes {
-    position: absolute;
+    /* position: absolute;
     right:0px;
     top:50%;
-    transform: translateY(-50%);
-    border:1px solid rgb(255, 106, 0);
+    transform: translateY(-50%); */
+    justify-self: end;
+
+    /* border:1px solid rgb(255, 106, 0); */
 }
 
