finished for today. Completed the create a new blog page and then created a to-do to before I finish the project

--- a/WebDev/blog-project/frontend/pages/Dashboard.module.css
+++ b/WebDev/blog-project/frontend/pages/Dashboard.module.css
@@ -6,6 +6,11 @@
 .page-name {
     font-size: 36px;
     margin-bottom: 1.5rem;
+    font-weight: 500;
+}
+.nav-container {
+    border-bottom: 1px solid hsl(0, 0%, 90%);
+    margin-bottom: 3rem;
 }
 .page-nav {
     margin-bottom: 1.5rem;
