--- a/WebDev/blog-project/frontend/src/BlogForm.module.css
+++ b/WebDev/blog-project/frontend/src/BlogForm.module.css
@@ -1,18 +1,20 @@
 .form h2 {
     font-size: 28px;
     margin-bottom: 1.5rem;
+    font-weight: 500;
 }
 .form-group {
     width:100%;
     margin-bottom: 1rem;
+    position: relative;
     /* border:1px solid red; */
 }
-/* .form-group label {
+.form-group label {
     display:block;
     padding-left: 1px;
-    margin-bottom: .5rem;
-    /* border:1px solid green; *
-} */
+    margin-bottom: .24rem;
+    /* border:1px solid green;  */
+}
 .form-group input[type="text"] {
     padding:10px;
     font-size: 14px;
@@ -67,10 +69,10 @@
     
 }
 .check-group {
-    border:1px solid red;
+    /* border:1px solid red; */
     width:fit-content;
     height:fit-content;
-    margin-bottom: 1.5rem;
+    /* margin-bottom: 1.5rem; */
 }
 .label {
     font-size: 14px;
@@ -89,6 +91,20 @@
     box-shadow: none;
     border-color: inherit;
 }
+.btn-block {
+    color:white;
+    border:none;
+    padding:10px;
+    width:82px;
+    background-color: rgb(255, 177, 75);
+    border-radius: 4px;
+    cursor:pointer;
+    position: absolute;
+    right:0;
+}
+.form {
+    margin-bottom: 10rem;
+}
 .select-tags {
     font-size: 14px;
     /* width:100%; */
@@ -96,10 +112,6 @@
 }
 :root {
     --md-editor-font-family: monospace !important;
-}
-.content-editor textarea {
-    /* height:470px; */
-    /* border:1px solid red; */
 }
 .content-editor {
     /* height: 500px !important; */
