--- a/WebDev/blog-project/frontend/src/Header.module.css
+++ b/WebDev/blog-project/frontend/src/Header.module.css
@@ -9,6 +9,7 @@
     padding:10px 0;
     grid-template-columns: 1fr 2fr 1fr;
     width:75%;
+    max-width: 1080px;
     height:60px;
     align-items: center;
     text-align: center;
