--- a/WebDev/blog-project/frontend/src/ImageUpload.module.css
+++ b/WebDev/blog-project/frontend/src/ImageUpload.module.css
@@ -1,5 +1,5 @@
 .border {
-    background-image: url("data:image/svg+xml,%3csvg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%' height='100%' fill='none' rx='4' ry='4' stroke='%23000000FF' stroke-width='4' stroke-dasharray='6%2c 14' stroke-dashoffset='10' stroke-linecap='square'/%3e%3c/svg%3e");
+    background-image: url("data:image/svg+xml,%3csvg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%' height='100%' fill='none' rx='4' ry='4' stroke='%23CCCCCCFF' stroke-width='4' stroke-dasharray='6%2c 14' stroke-dashoffset='10' stroke-linecap='square'/%3e%3c/svg%3e");
     height:200px;
     width:100%;
     /* display:flex; */
@@ -33,13 +33,16 @@
     object-fit: cover;
 }
 .icon {
-    font-size: 32px;
-    margin:none;
-    padding:none;
+    font-size: 112px;
+    display:flex;
+    margin:0;
+    padding:0;
+    stroke-width: 5;
+    /* border:1px solid red; */
 }
 .prompt {
     z-index: 10;
-    color:black;
+    color:hsl(0, 0%, 60%);
     /* border: 2px solid rgb(80, 194, 255); */
     display:flex;
     flex-direction: column;
