--- a/WebDev/blog-project/frontend/pages/Dashboard.module.css
+++ b/WebDev/blog-project/frontend/pages/Dashboard.module.css
@@ -36,7 +36,7 @@
     position: absolute;
     top:0;
     height:100%;
-    background: rgb(255, 217, 168);
+    background: antiquewhite;
     border-radius: 8px;
     transition: 0.3s ease;
     z-index: 0;
