--- a/WebDev/blog-project/frontend/src/BlogForm.module.css
+++ b/WebDev/blog-project/frontend/src/BlogForm.module.css
@@ -24,6 +24,59 @@
     transition:0.3s ease;
     /* border:1px solid red; */
 }
+.error-container {
+    position: fixed;
+    top:4rem;
+    right:2rem;
+    width:fit-content;
+    height: 4rem;
+    border:1px solid hsl(0, 0%, 80%);
+    border-radius: 6px;
+    overflow: hidden;
+    background-color: rgb(255, 225, 225);
+    border-color:rgb(255, 116, 116);
+    z-index: 10;
+}
+.error-message {
+    /* position: absolute;
+    right:0;
+    top:0;
+    background-color: rgb(255, 225, 225);
+    color:rgb(255, 116, 116);
+    border-radius: 4px;
+    font-size: 12px;
+    padding: 3px; */
+    /* width:100%; */
+    /* height: 100%; */
+    /* padding:1.5rem; */
+    display: flex;
+    text-align: center;
+    align-self: center;
+    margin: 1.5rem;
+    font-size: 16px;
+    /* margin:1.5rem; */
+    /* border:1px solid blue; */
+
+}
+.countdown {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background-color: red;
+    /* transform: translateX(); */
+}
+.animate {
+    animation: slideIn 5s linear forwards;
+}
+@keyframes slideIn {
+    from {
+        transform: translateX(0%);
+    }
+    to {
+        transform: translateX(-100%);
+    }
+}
 .checkbox {
     display:grid;
     grid-template-columns: max-content max-content;
