--- a/WebDev/blog-project/frontend/src/BlogForm.module.css
+++ b/WebDev/blog-project/frontend/src/BlogForm.module.css
@@ -74,6 +74,8 @@
     gap:6px;
     box-sizing: border-box;
     align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+
 }
 .checkbox input {
     /* border:2px solid blue; */
@@ -115,6 +117,7 @@
     /* border:1px solid red; */
     width:fit-content;
     height:fit-content;
+
     /* margin-bottom: 1.5rem; */
 }
 .label {
@@ -134,6 +137,15 @@
     box-shadow: none;
     border-color: inherit;
 }
+.btn-grid {
+    display:flex;
+    flex-direction: row;
+    gap:10px;
+    position: absolute;
+    right:0;
+    /* border:1px solid blue; */
+    width: fit-content;
+}
 .btn-block {
     color:white;
     border:none;
@@ -142,11 +154,11 @@
     background-color: rgb(255, 177, 75);
     border-radius: 4px;
     cursor:pointer;
-    position: absolute;
-    right:0;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+
 }
 .form {
-    margin-bottom: 10rem;
+    margin-bottom: 3rem;
 }
 .select-tags {
     font-size: 14px;
