added views functionality, which means now I can sort by views for trending

--- a/WebDev/blog-project/frontend/src/BlogItem.module.css
+++ b/WebDev/blog-project/frontend/src/BlogItem.module.css
@@ -122,7 +122,8 @@
     position: relative;
     background:white;
     padding:2rem;
-    width: 90vw;
+    width: 80vw;
+    max-width: 900px;
     /* justify-content: center; */
     margin:auto;
     /* height: 85vh; */
