fixed bugs with rendering text and images and title of blog items. They were not wrapping correctly and had a lot  of whitespace and was expanding incorrectly.

--- a/WebDev/blog-project/frontend/src/BlogPage.module.css
+++ b/WebDev/blog-project/frontend/src/BlogPage.module.css
@@ -112,6 +112,8 @@
     margin-bottom: 3rem;
     box-sizing: border-box;
     border-radius: 4px;
+    word-break: break-word;
+    overflow-wrap: break-word;
     /* position: absolute; */
     /* height:auto; */
 }
